# wildintelproject-trapper-sdk

./: .dockerignore  .gitignore  404.html  CHANGELOG.md  Dockerfile  README.md  cli.py  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.sh  sitemap.xml
.github/scripts/: promote_changelog.py
.github/workflows/: docs.yml  release.yml  tests.yml
about/: index.html
api/: index.html
api/api_client_base/: index.html
api/api_query/: index.html
api/base_component/: index.html
api/errors/: index.html
api/trapper_client/: index.html
docs/: about.md  api.md  features.md  index.md  installation.md  testing.md  usage.md
docs/api/: api_client_base.md  api_query.md  base_component.md  errors.md  index.md  trapper_client.md
docs/guide/: ai_classifications.md  classification_media.md  classification_package.md  classification_projects.md  classification_results_agg.md  classifications.md  classifications_map.md  classificators.md  collections.md  deployments.md  locations.md  locations_geojson.md  maps.md  research_projects.md  resources.md  sequences.md  species.md  user_classifications.md  users.md
docs/stylesheets/: extras.css  termynal.css
examples/: README.md  download_camtrapdp_for_classification_project.py  get_classification_projects_for_research_project.py  get_location_deployments.py  get_user_locations.py  get_user_research_projects.py  import_classifications.py  import_deployments.py  import_locations.py  sample_deployments.csv  sample_locations.csv  sample_observations.csv
features/: index.html
guide/ai_classifications/: index.html
guide/classification_media/: index.html
guide/classification_package/: index.html
guide/classification_projects/: index.html
guide/classification_results_agg/: index.html
guide/classifications/: index.html
guide/classifications_map/: index.html
guide/classificators/: index.html
guide/collections/: index.html
guide/deployments/: index.html
guide/locations/: index.html
guide/locations_geojson/: index.html
guide/maps/: index.html
guide/research_projects/: index.html
guide/resources/: index.html
guide/sequences/: index.html
guide/species/: index.html
guide/user_classifications/: index.html
guide/users/: index.html
installation/: index.html
javascripts/: termynal-init.js
search/: search_index.json
src/trapper_client/: APIClientBase.py  TrapperClient.py  __init__.py  api_client_base.py  api_query.py  (+5 more)
testing/: index.html
tests/: README.md  base_component_tests.py  conftest.py  env.example  test_media.py
usage/: index.html
(+158 files in other folders)
